--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -32,7 +32,7 @@
 
 		<!-- Page Heading/Breadcrumbs -->
 		<h1 class="mt-4 mb-3">
-			Spring eCommerce <small>Producto</small>
+		TRONQUIWEB <small>Producto</small>
 		</h1>
 
 		<ol class="breadcrumb">
@@ -46,7 +46,7 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<a href="#"> <img class="img-fluid rounded"
-							th:src="@{/images/{img} (img=${producto.imagen})  }" alt="">
+							th:src="${producto.imagen}" alt="">
 						</a>
 					</div>
 					<div class="col-lg-6">
