--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -15,20 +15,27 @@
 <!-- Bootstrap core CSS -->
 <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}"
 	rel="stylesheet">
+	
 
 <!-- Custom styles for this template -->
 <link th:href="@{css/heroic-features.css}" rel="stylesheet">
+
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 </head>
 
 <body>
 
 	<!-- Navigation -->
-	<div th:include="usuario/template_usuario.html::header" th:if="${sesion==null}">	
+ <div th:include="usuario/template_usuario.html::header" th:if="${sesion==null}">	
 	</div>
 	
 	<div th:include="usuario/template_usuario.html::header-user" th:unless="${sesion==null}"> </div>
 
+	<br>
+	<br>
+	<br>
 	<!-- Page Content -->
 	<div class="container">
 
@@ -38,8 +45,7 @@
 			<p class="lead">Tu tienda de Servicio Informaticos</p>
 		</header>
 
-		<!-- Page Features -->
-		<div class="row text-center">
+			<div class="row text-center">
 
 			<div class="col-lg-3 col-md-6 mb-4" th:each="producto: ${productos}">
 				<div class="card h-100">
@@ -56,10 +62,8 @@
 			</div>
 
 		</div>
-		<!-- /.row -->
-
 	</div>
-	<!-- /.container -->
+
 
 	<!-- Footer -->
 	<div th:include="usuario/template_usuario.html::footer">
