--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -19,42 +19,72 @@
 <!-- Custom styles for this template -->
 <link th:href="@{css/heroic-features.css}" rel="stylesheet">
 
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
 </head>
+
+
 
 <body>
 
 	<!-- Navigation -->
-	<div th:fragment="header">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-			<div class="container">
-				<a class="navbar-brand" th:href="@{/}">TRONQUIWEB</a>
 
+	
+	
+	
+	<div th:fragment="header">
+	
+	
+	
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+			<div class="container">		
+				<a class="navbar-brand" th:href="@{/}">TRONQUIWEB</a>
+				
 				<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
+					<div class="barra">
 					<input class="form-control mr-sm-2" type="search"
 						placeholder="Buscar" aria-label="Search" name="nombre"
 						autocomplete="off">
 					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+					</div>
 				</form>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+		            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+		            <span class="navbar-toggler-icon"></span>
+		        </button>
+		        <div class="collapse navbar-collapse" id="navbarResponsive">
+		            <ul class="navbar-nav ml-auto">
+		                <li class="nav-item"><a class="nav-link" th:href="@{/getCart}">Carrito</a></li>
+		                <li class="nav-item"><a class="nav-link" th:href="@{/usuario/login}">Login</a></li>
+		                <li class="nav-item"><a class="nav-link" th:href="@{/usuario/formulario}">Formulario</a></li>
+		            </ul>
+		        </div>
+			
+				 </div>				        
+	</nav>
+	
+		
+</div>
+						
+						
+						
 
-
-				<button class="navbar-toggler" type="button" data-toggle="collapse"
-					data-target="#navbarResponsive" aria-controls="navbarResponsive"
-					aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarResponsive">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item"><a class="nav-link" th:href="@{/getCart}">Carrito</a></li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/usuario/login}">Login</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-
-	</div>
 	
 	
-	<!-- Navigation -->
+	
+	
+	
+	
+	
+	
+	
+	
+	
+
+
+
+<!-- Navigation -->
+
 <div th:fragment="header-user">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
@@ -92,6 +122,8 @@
 	</nav>
 
 </div>
+
+
 
 
 	<!-- Footer -->
