--- a/src/main/resources/templates/usuario/formulario.html
+++ b/src/main/resources/templates/usuario/formulario.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>			<!-- Este es el inicio de cualquier página Web. Sirve para que el navegador pueda interpretarla -->
+<!DOCTYPE html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-<html>					<!-- La etiqueta de HTML es obligatoria. Sirve para delimitar donde se inicia y termina el código de la página Web -->
+<head>
 
-<head>					<!-- La etiqueta HEAD es obligatoria, y sirve para definir la cabecera de la página Web -->
-	<meta language="esp"/>															
-	<meta name="author" content=""/>									
-	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8" /> 	
-	<meta name="keywords" content="plantilla HTML5" />								
-	<link rel="icon" href="img/favicon.png">										
-	<title> Pantilla </title>	
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-		<meta name=”viewport” content=”width=device-width, initial-scale=1.0″ />
-		
-		
+  <title>TRONQUIWEB</title>
 		<!-- Bootstrap core CSS -->
 <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}"
 	rel="stylesheet">
@@ -41,7 +37,7 @@
  
 	<div>
 
-		<form action="https://formsubmit.co/otrojas4@gmail.com" method="POST"> 
+	<form action="https://formsubmit.co/otrojas4@gmail.com" method="post">
 	<br>
 		<h1>Formulario de contacto</h1> 
 
@@ -59,8 +55,7 @@
 		<textarea id="texto" name="mensaje"></textarea><br><br>
 
 		<input type="submit" value="Enviar" />
-		<input type="reset" value="Borrar" />
-		<input type="hidden" name="_next" value="tronquiweb.azurewebsites.net"></input>
+		<input type="hidden" name="_next" value="https://tronquiweb.azurewebsites.net/"></input>
 		<input type="hidden" name="_captcha" value="false"></input>
 		
 	</form>
@@ -72,88 +67,6 @@
 
 
 
-<script>			/* La etiqueta SCRIPT sirve para definir los programas de Javascript que se le aplican a la página Web */
-
-
-		/* Estructura de un mailto:
-
-			mailto:direccion@destinatario.com?						 	Nombre de la función e email del destinatario. 
-																		Hay que cerrarlo con ?
-
-			&cc=copia@destinatario.com;segundacopia@destinatario.com    	En caso de que haya mas destinatarios 
-																		se añaden despues de &cc y separados por ;
-			
-			&bcc=copiaoculta@destinatario.com							Si se envia copia copia oculta va después de &bcc
-			
-			&subject=Asunto%20con%20espacios							Aqui enviamos el asunto despues de &subject
-			
-			&body=Este%20es%20el%20cuerpo%20del%20mensaje				Aqui enviamos el texto del mensaje despues de &body
-
-
-			Para enviar un mensaje hay que reemplazar los espacios por %20. */
-
-
-function enviamail()
-	{
-
-		var nombre, email, asunto, texto;
-
-		nombre = document.getElementById("nombre").value;
-		email = document.getElementById("email").value;
-		asunto = document.getElementById("asunto").value;
-		texto = document.getElementById("texto").value;
-
-
-			/* Vamos a construir un mensaje de respuesta automático para enviar al destinatario */
-
-		var mensaje = email + "?Subject=Mensaje recibido&body=";
-
-		mensaje = mensaje + "Estimado señor/a " + nombre + "\n\n";
-
-		mensaje = mensaje + "Le comunicamos que hemos recibido su consulta. En breve recibirá nuestra respuesta. Un saludo."
-		
-		alert(mensaje);				/* Mensaje final */
-
-
-			/* Para enviar un mensaje hay que reemplazar los espacios por %20. Eso lo hacemos con .replace */
-
-		mensaje = mensaje.replace(/ /g, "%20");
-		
-		alert(mensaje); 			/* Mensaje preparado para enviar */
-		
-		window.location.href="mailto:" + mensaje;
-		
-
-
-		/* Vamos a construir un mensaje automático como copia a nuestro correo */
-
-		var nuestro_correo = "Otrojas4@gmailcom";
-
-		var mensaje = nuestro_correo + "?Subject=Mensaje recibido de " + nombre + "&body=";
-
-		mensaje = mensaje + "\nNombre: " + nombre + "\nEmail: " + email + "\nAsunto: " + asunto + "\nMensaje: " + texto;
-
-		alert(mensaje);				/* Mensaje final */
-
-		
-			/* Para enviar un mensaje hay que reemplazar los espacios por %20. Eso lo hacemos con .replace */
-
-		mensaje = mensaje.replace(/ /g, "%20");
-		
-		alert(mensaje); 			/* Mensaje preparado para enviar */
-		
-		window.location.href="mailto:" + mensaje;
-
-
-	
-	}
-
-
-
-
-
-
-</script>	
 
 
 </html>
